--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -143,6 +143,7 @@
             text-decoration: underline;
             margin-top: 0;
             margin-bottom: 0;
+            <style>
         }
         .image-container {
             width: 720px;
@@ -151,9 +152,9 @@
             align-items: center;
         }
         .image-container img {
-            flex-grow: 1;
+            width: calc((720px - (20px * (var(--num-images, 1) - 1))) / var(--num-images, 1));
             height: auto;
-            max-width: calc((720px - (20px * (var(--num-images, 1) - 1))) / var(--num-images, 1));
+            max-width: 100%;
             margin-right: 20px;
         }
         .image-container img:last-child {
