--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -150,6 +150,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            margin-bottom: 20px;
         }
         .image-container img {
             width: calc((720px - (20px * (var(--num-images, 1) - 1))) / var(--num-images, 1));
@@ -164,7 +165,7 @@
 </head>
 <body>
     <div class="heading-text" style="margin-bottom: 60px;">
-        ##9:12 pm upload##
+        9:36 upload
         <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
@@ -204,10 +205,10 @@
         <div class="image-container" style="--num-images: 2;">
             <img src="https://kovid-pal-odouard.github.io/thevillage-2024/tompkins_elegy/1.1_ladybird.jpg" alt="ladybird">
             <img src="https://kovid-pal-odouard.github.io/thevillage-2024/tompkins_elegy/1.2_ladybird.jpg" alt="ladybird">
-        </div
+        </div>
         <div class="image-container" style="--num-images: 2;">
-            <img src="2.1_st_marks.JPG" alt="st marks">
-            <img src="2.2_physical_graffitea.JPG" alt="physical graffitea">
+              <img src="3.1_poetica_coffee.JPG" alt="poetica coffee">
+              <img src="3.2_search&destroy.JPG" alt="search&destroy">
         </div>
         <div class="image-container" style="--num-images: 1;">
             <img src="2.3_mangomango_search&destroy.JPG" alt="mangomango">
@@ -216,9 +217,9 @@
               <img src="3.1_poetica_coffee.JPG" alt="poetica coffee">
               <img src="3.2_search&destroy.JPG" alt="search&destroy">
         </div>
-        <div class="image-container style="--num-images: 2;"">
+        <div class="image-container" style="--num-images: 2;">
               <img src="4.1_search&destroy.JPG" alt="search&destroy">
-              <img src="4.2_romeo's.JPG" alt="romeo's">
+              <img src="4.2_romeos.JPG" alt="romeos">
         </div>
         <div class="image-container" style="--num-images: 2;">
               <img src="5.1_fancy_sushi.JPG" alt="sushi">
@@ -270,7 +271,7 @@
             <img src="14.1_loisaida.jpg" alt="loisaida">
             <img src="14.2_loisaida.jpg" alt="loisaida">
       </div>
-      <div class="image-container" style="--num-images: 2;">
+      <div class="image-container" style="--num-images: 3;">
             <img src="15.1_loisaida.jpg" alt="loisaida">
             <img src="15.2_loisaida.jpg" alt="loisaida">
             <img src="15.3_loisaida.jpg" alt="loisaida">
