--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -146,7 +146,7 @@
             <style>
         }
         .image-container {
-            width: 720px;
+            width: 900px;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -165,7 +165,7 @@
 </head>
 <body>
     <div class="heading-text" style="margin-bottom: 60px;">
-        9:36 upload
+        9:53 upload
         <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
@@ -252,7 +252,7 @@
             <img src="10.1_tompkins.JPG" alt="tompkins">
             <img src="10.2_tompkins.JPG" alt="tompkins">
       </div>
-      <div class="image-container" style="--num-images: 2;">
+      <div class="image-container" style="--num-images: 1;">
             <img src="11.1_tompkins.JPG" alt="tompkins">
       </div>
       <div class="essay" style="margin-bottom: 60px;">
@@ -260,9 +260,17 @@
       </div>
 
       <div class="image-container" style="--num-images: 2;">
-            <img src="12.1_loisaida.jpg" alt="loisaida">
-            <img src="12.2_loisaida.JPG" alt="loisaida">
+            <img src="oldloisaida1.png" alt="loisaida">
+            <img src="oldloisaida2.png" alt="loisaida">
       </div>
+      <div class="image-container" style="--num-images: 2;">
+          <img src="oldloisaida3.png" alt="loisaida">
+          <img src="oldloisaida4.jpg" alt="loisaida">
+      </div>
+      <div class="essay" style="margin-bottom: 60px;">
+          <p class="caption">^ the vibes in loisaida in the '70s</p>
+      </div>
+
       <div class="image-container" style="--num-images: 2;">
             <img src="13.1_loisaida.jpg" alt="loisaida">
             <img src="13.2_loisaida.jpg" alt="loisaida">
@@ -282,6 +290,10 @@
       </div>
       <div class="essay" style="margin-bottom: 60px;">
           <p class="caption">^ the vibes in loisaida, 2024</p>
+      </div>
+
+      <div class="image-container"style="--num-images: 1;">
+            <img src="keys_locks.JPG" alt="keys and locks">
       </div>
 
     <div class="essay", style="margin-top:50px; margin-bottom:80px">
