--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -165,7 +165,7 @@
 </head>
 <body>
     <div class="heading-text" style="margin-bottom: 60px;">
-        10:22 upload
+        10:50 upload
         <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
@@ -326,7 +326,7 @@
               An attempt to give color to this statement, finally, provides the moment to step out of the narratives of power and into the narratives of subaltern life: of the squatters and the anarchists themselves. Though lacking an ancestral claim to land, Starecheski points out that many LES squatters used the language of kinship to conceive of themselves: they described themselves as families and often publicly highlighted resident families with children. “[T]hey asserted peoplehood by showcasing a shared history, making themselves legible as a collective that could steward collective resources, not just a loose group  of individual[s]” (<span class="italic">Squatters: property</span> 62). Starecheski reads this as a more labor-oriented, urban re-interpretation of common kinship narratives of a land and a people reciprocally defining one another. “I put my blood, sweat, and tears into the place. My shoulder and my knees and my lungs are forever in this building” said one squatter, “I have pieces of flesh mixed in the mortar there,” said another; others still buried works of art in the foundation or drywall of their homes (66-67). They rebuilt entire buildings: roofs, exterior walls, joists, floors, windows, interior walls, plumbing, and electricity while living in their freezing hot or burning cold, rubble-filled corners (65); They tended previously unused gardens (Scher, 30); they created communities of “artists, undocumented immigrants, homeless people, and radicals” and an Eviction Watch Network phone tree that could be used to quickly mobilize squatters and their supporters to the defense of a building threatened by eviction (Starecheski, <span class="italic">Squatting: Oral History</span> 191); they documented and archived their actions (Orr). They lived not just <span class="italic">in,</span> but <span class="italic">to </span> improve, protect and defend their urban space.
           </p>
           <p class="indent">
-              Partially returning to the gaze of power<sup>3<sup>, when Kate Walter’s piece in <span class="italic">The Times</span> describes squatters as “middle class, white kids who decided to become punk radicals” (A23), it doesn’t just flatten the plural faces of the scene into one picture of a homogenous group of entitled youth: it inverts the causality around their politics. In the eyes of power, squatters do what they do <span class="italic">to be political</span>, or even more damningly, “vying for their 15 minutes of fame” (Walter, A23). Some subaltern narratives point the other way. In an anonymous letter intended for other residents of the East Village signed “An Anarchist”, the author explains that the police crackdown on Tompkins was not a spontaneous action, but rather predicated on principled orders from higher up. He imagines a pep-talk given to officers about how “the city is being taken over by radicals and anarchists (meaning us– the residents of the area” (<span class="italic">Why did the police</span>?). Here, the author seems to imply that these labels were forced upon people by systems of power, but simultaneously chooses to identify with them. This would seem to suggest that, at least for the author, initial interactions with anarchist politics were not brought about by some choice (as implied by Walter) but rather because power apprehended their life (or, in the author’s vocabulary, their residence) as inherently political. The sort of political action that resulted, like the establishment of the Eviction Watch Network – which drew on “the traditions of the Yippies, the Young Lords, and European urban squatting movements” (Starecheski <span class="italic">Squatting: oral history</span>, 191) – were a defense of life. When that life (as discussed earlier) was not recognized as a life, that defense became, in the eyes of power, a defense of nothing: just “vying for… 15 minutes of fame” (Walter, A23).
+              Partially returning to the gaze of power<sup>3</sup>, when Kate Walter’s piece in <span class="italic">The Times</span> describes squatters as “middle class, white kids who decided to become punk radicals” (A23), it doesn’t just flatten the plural faces of the scene into one picture of a homogenous group of entitled youth: it inverts the causality around their politics. In the eyes of power, squatters do what they do <span class="italic">to be political</span>, or even more damningly, “vying for their 15 minutes of fame” (Walter, A23). Some subaltern narratives point the other way. In an anonymous letter intended for other residents of the East Village signed “An Anarchist”, the author explains that the police crackdown on Tompkins was not a spontaneous action, but rather predicated on principled orders from higher up. He imagines a pep-talk given to officers about how “the city is being taken over by radicals and anarchists (meaning us– the residents of the area” (<span class="italic">Why did the police</span>?). Here, the author seems to imply that these labels were forced upon people by systems of power, but simultaneously chooses to identify with them. This would seem to suggest that, at least for the author, initial interactions with anarchist politics were not brought about by some choice (as implied by Walter) but rather because power apprehended their life (or, in the author’s vocabulary, their residence) as inherently political. The sort of political action that resulted, like the establishment of the Eviction Watch Network – which drew on “the traditions of the Yippies, the Young Lords, and European urban squatting movements” (Starecheski <span class="italic">Squatting: oral history</span>, 191) – were a defense of life. When that life (as discussed earlier) was not recognized as a life, that defense became, in the eyes of power, a defense of nothing: just “vying for… 15 minutes of fame” (Walter, A23).
           </p>
           <p class="indent">
               But what are these politics a defense of? What does subaltern life have to say about itself? Or simply: how do people think they should live? In the previously mentioned letter, the anonymous anarchist writes:
@@ -350,6 +350,10 @@
               When power abandoned the East Village because it could no longer turn a profit from it, subaltern life moved into the ruins left behind, and, as life does, transformed them. In doing so, it transformed itself into wonderful new things: a punk scene, a drag scene, an anarchist scene, a zine scene, new people and new kin, new buildings and new community gardens. Power apprehended this as not as life but as crime, until a time when it became clear that a profit could be made from this transformation. In extracting this, it pushed out the life that lived according to its own subaltern logic, or brought that life under its own logic of the dollar: “Eat [for $50], Drink [for $38], Start a Revolution” (“Ladybird”). Somewhere, a life complains, “My keys don’t fit these locks No More.”
           </p>
         </div>
+
+    <div class="image-container"style="--num-images: 1;">
+        <img src="keys_locks.JPG" alt="keys and locks">
+    </div>
     <div class="essay", style="margin-top:50px; margin-bottom:80px">
         <p>
             <sup>1</sup>  Today, the Lower East Side (LES) is often thought to have its northern border at Houston St and the East Village above it is between Houston St and 14 St. Earlier references to the LES, though, include Alphabet City (which is a part of the East Village east of Tompkins) and Tompkins itself, which are both north of Houston St. In other words, any part of Manhattan south of 14th and east of Broadway (more or less) used to be considered part of the LES. This is why the Nuyorican reinterpretation of the LES (Loisaida) doesn’t actually include the area most commonly referred to as the LES today. Alphabet City, which was historically primarily Latino/a dating back to the ‘70s, was seen as part of the LES back then, but this changed because of the distinct neighborhood identities north and south of Houston (between the contemporary LES and the East Village) from the ‘70s onwards. As late as the ‘80s and ‘90s though, East Village squats are referred to as being in the LES, so this paper will at times use this older sense of the term to situate itself in the vocabulary of the time to which it refers (Nieves, B6; McCarthy, C8).
@@ -369,10 +373,54 @@
     <div class="essay" style="margin-bottom:100px">
     <div class="essay">
         <p class="bibliography">
-            xx
+            Anarchist, An. “Why did the police try to close down Tompkins Square Park?” <span class="italic">THE BLACK EYE COLLECTIVE.</span> The Paper Tiger Television Archive, Tamiment Library, 2014, MSS.276 Box 4.
         </p>
         <p class="bibliography">
-            xx
+            “About Dollars & Sense.” Dollars and Sense: About, Economic Affairs Bureau, Inc., 2024, <a href="https://www.dollarsandsense.org/about4.html" target="_blank">https://www.dollarsandsense.org/about4.html</a>. Accessed 4 March 2024.
+        </p>
+        <p class="bibliography">
+            Avni, Benny. "Tompkins Square Park and the West Bank." <span class="italic">New York Times</span> (1923-), Aug 10, 1988, A27.
+        </p>
+        <p class="bibliography">
+            Carlson, Jen, et al. “Meet The Indie Newspaper Man Who Documented The East Village In The 1980s.” <span class="italic">Gothamist</span>, 20 August 2015, <a href="https://gothamist.com/arts-entertainment/meet-the-indie-newspaper-man-who-documented-the-east-village-in-the-1980s" target="_blank">https://gothamist.com/arts-entertainment/meet-the-indie-newspaper-man-who-documented-the-east-village-in-the-1980s</a> Accessed 12 March 2024.
+        </p>
+        <p class="bibliography">
+            Foucault, Michel. "Lives of Infamous Men." <span class="italic">Power: The Essential Works of Foucault, 1954-1984</span>, edited by James D. Faubion, translated by Robert Hurley and others, vol. III, Vintage Books, 2000, pp. 157-175.
+        </p>
+        <p class="bibliography">
+            “Ladybird | Vegan Tapas & Wine Bar.” <span class="italic">Ladybird</span> Overthrow Hospitality, 2016, <a href="https://www.ladybirdny.com" target="_blank">https://www.ladybirdny.com</a>
+        </p>
+        <p class="bibliography">
+            McCarthy, Mary M. "The Real Loisaida: [Letter]." <span class="italic">New York Times</span>, May 27, 1981. C8.
+        <p class="bibliography">
+            New York Times Editorial Board. "Yes, a Police Riot: [Editorial]." <span class="italic">New York Times</span>, Aug 26, 1988.
+        </p>
+        <p class="bibliography">
+            Orr, Fly. “Fly’s Story.” fly spage, flyspage.com/index.html. Accessed 26 Mar. 2024, <a href="https://flyspage.com/bio.html." target="_blank">https://flyspage.com/bio.html.</a>
+        </p>
+        <p class="bibliography">
+            Perez-Rivas, Manuel. "Koch Suspends Park Curfew Following Bloody Clash in Tompkins Square." <span class="italic">Newsday</span>, 8 Aug. 1988, p. 5.
+        </p>
+        <p class="bibliography">
+            “Renovating, Adj.” Oxford English Dictionary, Oxford UP, July 2023 <a href="https://doi.org/10.1093/OED/1121674997." target="_blank">https://doi.org/10.1093/OED/1121674997.</a>
+        </p>
+        <p class="bibliography">
+            Rivas, John "Bimbo." "Loisaida." Saulny León, Ivonne Marcelle. "Code-switching: la alternancia de código lingüístico en la poesía norteamericana de origen hispano." 2011, pp. 146-147.
+        </p>
+        <p class="bibliography">
+            Rosen, Miss. “This Photographer Shot the Radical Protests That Inspired Occupy.” <span class="italic">VICE</span>, 9 August 2018, <a href="https://www.vice.com/en/article/ywkxgb/q-sakamaki-photographer-tompkins-square-park-riots-1988." target="_blank">https://www.vice.com/en/article/ywkxgb/q-sakamaki-photographer-tompkins-square-park-riots-1988</a>. Accessed 12 March 2024.
+        </p>
+        <p class="bibliography">
+            Scher, Abby. "Anarchism Faces the '90s!"  <span class="italic">Dollars & Sense</span>, no. 222, 03, 1999, pp. 30-35.
+        </p>
+        <p class="bibliography">
+            Starecheski, Amy. "Squatting history: the power of oral history as a history-making practice." <span class="italic">The Oral History Review</span> 41.2 (2014): 187-216.
+        </p>
+        <p class="bibliography">
+            Starecheski, Amy. "Squatters make history in New York: Property, history, and collective claims on the city." <span class="italic">American Ethnologist</span> 46.1 (2019): 61-74.
+        </p>
+        <p class="bibliography">
+            Walter, Kate. "'Village' Anarchists: Master Intimidators." New York Times (1923-), Jul 26, 1989, A23
         </p>
     </div>
 </body>
