--- a/index.html
+++ b/index.html
@@ -233,5 +233,10 @@
             FROM FISH TO POSTCOLONIALITY.
         </a>
     </div>
+    <div class="link2-container">
+        <a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/" class="link2-element" target="_blank">
+            2025-2025: work from the wash heights dining table
+        </a>
+    </div>
 </body>
 </html>
