--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </div>
     <div class="link2-container">
         <a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/" class="link2-element" target="_blank">
-            2025-2025: work from the wash heights dining table
+            stuff  from the wash heights dining table: 2024-2025
         </a>
     </div>
 </body>
