--- a/washington-heights-dining-table/index.html
+++ b/washington-heights-dining-table/index.html
@@ -110,7 +110,11 @@
     </div>
 
     <div class="caption" style="margin-bottom: 15px;">
-        <p>**february 2025:**    i'm starting this page because it feels like the life of the village website has come to an end. everything there i did in the brittany lounge; everything here i did at a dining table in the heights. everything there was for classes i chose so i could figure out what departments i wanted to spend time in; everything here was for classes i chose *knowing* what department i wanted to spend time in. i'm keeping the colors the same, i think, to represent the continuinity between the two: this is still stuff i'm making for my undergrad. but it's also of a different type: the way i sorted last year's projects from most to least academic made sense as a re-reading of those, but i think here i'll just compile them by class. anyway, i'm gonna be uploading those projects in the next couple of weeks. hope you enjoy!</p>
+        <h2>some initial thoughts - february 2025...</h2>
+        <p>i'm starting this page because it feels like the life of the village website has come to an end. everything there i did in the brittany lounge; everything here i did at a dining table in the heights. everything there was for classes i chose so i could figure out what departments i wanted to spend time in; everything here was for classes i chose *knowing* what department i wanted to spend time in. </p>
+    </div>
+    <div class="caption" style="margin-bottom: 15px;">
+        <p>i'm keeping the colors the same, i think, to represent the continuinity between the two: this is still stuff i'm making for my undergrad. but it's also of a different type: the way i sorted last year's projects from most to least academic made sense as a re-reading of those, but i think here i'll just compile them by class. anyway, i'm gonna be uploading those projects in the next couple of weeks. hope you enjoy!</p>
     </div>
 
 </body>
