--- a/washington-heights-dining-table/index.html
+++ b/washington-heights-dining-table/index.html
@@ -29,6 +29,9 @@
         .heading-text {
             text-align: center;
             margin-top: 10px;
+            background-color: #531639;
+            padding: 20px;
+            border-radius: 10px;
         }
 
         .heading-text h1 {
