--- a/index.html
+++ b/index.html
@@ -203,16 +203,16 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/dornish wedding.jpg" alt="image loading: the dornish wedding">
+        <img src="images/desi boatride.jpg" alt="image loading: desi boatride">
         <div class="overlay-text">
             <h1>KOVID PAL ODOUARD!</h1>
-            <p>now has a website!</p>
+            <p>this is my archive</p>
         </div>
         <div class="additional-text">
             an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code (with the help of chat gpt, lol). the principles are consistent, i swear! if anything on this website doesn't work, it's just camp bro <3
         </div>
         <div class="imagecaption">
-            Image: a dornishman and his sister pull up to the wedding
+            Image: (the day before the) biye!
         </div>
         <div class="lil-message-text">
             glory to the crickets!!
