--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         }
         .additional-text {
             position: absolute;
-            top: 22%; /* Adjust this value for vertical positioning */
+            top: 70%; /* Adjust this value for vertical positioning */
             left: 1.5%; /* Adjust this value for horizontal positioning */
             color: #fae828; /* Text color */
             font-family: 'Pixelon', sans-serif;
@@ -66,7 +66,7 @@
             line-height: 20px;
             max-width: 25%; /* Limit of how far it goes before wrapping */
             text-shadow: 2px 2px #bd7306; /* Apply text shadow with desired color */
-            background-color: #133523; /* Highlight */
+            background-color: #99552a; /* Highlight */
             padding: 5px; /* Add padding to make the highlight visible */
         }
         .imagecaption {
@@ -83,7 +83,7 @@
             position: absolute;
             right: 0.5%; /* Adjust this value for horizontal positioning */
             bottom: 6%; /* Adjust this value for vertical positioning */
-            color: #fcb5a2;
+            color: #ffffff;
             text-align: center;
             font-family: 'Pixelon', sans-serif;
             font-size: 12px;
