--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #b5e9f5;
+            background-color: #752763;
             position: relative;
             overflow-y: auto; /* Make the site scrollable vertically */
             overflow-x: hidden; /* Prevent horizontal scrolling */
@@ -58,8 +58,8 @@
         }
         .additional-text {
             position: absolute;
-            top: 60%; /* Adjust this value for vertical positioning */
-            left: 1%; /* Adjust this value for horizontal positioning */
+            top: 22%; /* Adjust this value for vertical positioning */
+            left: 99%; /* Adjust this value for horizontal positioning */
             color: #fae828; /* Text color */
             font-family: 'Pixelon', sans-serif;
             font-size: 18px;
