--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #e3c181;
+            background-color: #752763;
             position: relative;
             overflow-y: auto; /* Make the site scrollable vertically */
             overflow-x: hidden; /* Prevent horizontal scrolling */
@@ -41,7 +41,7 @@
             left: 1.5%; /* Adjust this value for horizontal positioning */
             text-align: left;
             color: #e635f0;
-            animation: textResize 3.1415961s infinite;
+            animation: textResize 3.1415926535s infinite;
             line-height: 1em; /* Set a fixed line height */
             white-space: nowrap; /* Prevent text from wrapping */
         }
