--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #752763;
+            background-color: 752763;
             position: relative;
             overflow-y: auto; /* Make the site scrollable vertically */
             overflow-x: hidden; /* Prevent horizontal scrolling */
@@ -59,7 +59,7 @@
         .additional-text {
             position: absolute;
             top: 22%; /* Adjust this value for vertical positioning */
-            left: 70%; /* Adjust this value for horizontal positioning */
+            left: 73%; /* Adjust this value for horizontal positioning */
             color: #fae828; /* Text color */
             font-family: 'Pixelon', sans-serif;
             font-size: 18px;
