--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: 752763;
+            background-color: #752763;
             position: relative;
             overflow-y: auto; /* Make the site scrollable vertically */
             overflow-x: hidden; /* Prevent horizontal scrolling */
