plastic imaginary phinish?!

--- a/washington-heights-dining-table/plastic_imaginary/index.html
+++ b/washington-heights-dining-table/plastic_imaginary/index.html
@@ -80,14 +80,6 @@
             line-height: 1.5;
         }
 
-        .essay .italic {
-            font-style: italic;
-            margin-top: 0;
-            margin-bottom: 0;
-            line-height: 1.5;
-
-        }
-
         .essay .indent {
             text-indent: 25px;
             margin-top: 0px;
@@ -139,7 +131,7 @@
         }
         .footnotes {
             margin-top: 40px;
-            border-top: 1px solid #ccc;
+            border-top: 3px solid #AE3179;
             padding-top: 10px;
             font-family: 'Garamond', serif;
             width: 720px;
@@ -150,10 +142,12 @@
         }
         .footnote a {
             text-decoration: none;
-            color: blue;
+            color: #84D6DD;
         }
         .footnote a:hover {
             text-decoration: underline;
+            color: #E7EFC1;
+            text-shadow: 1.5px 1.5px #84D6DD;
         }
     </style>
   </head>
@@ -162,7 +156,7 @@
           <h1>at a dining table: fall 2024 & spring 2025</h1>
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
-      <div class="essay", style="margin-bottom: 20px">
+      <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
           <h1>The Logic of the Plastic Imaginary</h1>
       </div>
       <div class="essay">
@@ -184,23 +178,42 @@
           <p class="indent">
               This fact is a lived reality for those who recycle plastic. Plastics’ propensity for absorbing whatever toxicity they interact with is felt by the people who work to recycle them in the form of negative health effects. Davis follows Rob Nixon in understanding this as <i>slow violence</i>: a violence that does not operate with the conventional imageries and temporalities of the explosive spectacle, but instead something gradual and invisible.<sup><a href="#footnote-10" id="ref-10">c8,</a><a href="#footnote-11" id="ref-11">c9,</a></sup> It’s hardly shocking that something that is recalcitrant, stable, undying, and nonporous commits violence to bodies that are the very opposite.
           </p>
-
-
+          <p class="bold">
+              Plastic’s persistent logic
+          </p>
+          <p class="indent">
+              One can accept this and categorically reject the utopian vision of the plastic imaginary while still buying into its logic. It is possible to understand human activity as an independent causality separate from natural cycles without a utopian imaginary around it. If, instead, one conceives of that independent causality of human activity as <i>inherently</i><sup>degrading of the natural cycles it operates in, then operating under the logic of the plastic imaginary could even manifest itself in an environmentalist stance. Take this narrative quoted by Fairhead and Leach on land use in Kissidougou:
+          </p>
+          <p class="blockquote">
+              Traditional structures which regulate the exploitation of natural resources, most often of pre-Islamic origin, incorporate a series of conservation aspects. Some still operate… but a change is beginning to show itself: a process of social change which implies a dissolution of traditional regulative structures which are not easily reconcilable with the commercialization trends.<sup><a href="#footnote-9" id="ref-9">c10</a></sup>
+          </p>
+          <p class="indent">
+              This narrative was paired with a mythology of an original Kissidougou that had high forest cover, low population density, and a functional social order that “limited people’s inherently degrading land and vegetation use,”<sup><a href="#footnote-13" id="ref-13">c11</a></sup> the dissolution of which has recently led to deforestation. In another case, the Ziama Forest reserve, an area protected as a part of a conservation effort, scholars tended to produce similar narratives. A conception of human activity as extractive and depleting land use was used to make carrying capacity-based arguments about land saturation to explain farmers’ encroachment on reserved areas.<sup><a href="#footnote-14" id="ref-14">c12</a></sup>
+          </p>
+          <p class="indent">
+              These narratives are false and harmful. As Fairhead and Leach propose in their counternarrative, the people of Kissidougou engaged in many vegetation-<i>enriching</i> activities. They plant forest islands, which provides shade for their crops and facilitates the formation of the secondary forest thicket;<sup><a href="#footnote-15" id="ref-15">c13</a></sup> They collect flammable grasses, which serve as useful building materials for thatching and reduces the risk of fire in the area; Their deposition of household waste fertilizes the forest and their crops.<sup><a href="#footnote-16" id="ref-16">c14</a></sup>  All these practices seem to have transformed the landscape quite significantly from its state in the nineteenth century, when documentary sources wrote that “There are no trees; the whole country is prairie; for firewood the people have to substitute cow dung, and a kind of moss which grows abundantly in that country.”<sup><a href="#footnote-17" id="ref-17">c15</a></sup> Thanks to human labor, the land is now a humid rainforest.<sup><a href="#footnote-18" id="ref-18">c16</a></sup>
+          </p>
+          <p class="indent">
+              Today, the Ziama Forest reserve is  “protected” from the “encroachment” of its indigenous inhabitants. That land was once a savanna home to commercially flourishing villages that cultivated rice, maize, and cassava but were overtaken by forest after rapid depopulation.<sup><a href="#footnote-19" id="ref-19">c17</a></sup> Human activity can re-shape land in ways that are neither degrading nor permanent: in fact — like in the Kissidougou case — it can facilitate the growth of ecosystems that otherwise would not be present.
+          </p>
+          <p class="indent">
+              The logic of the plastic imaginary denies us an imaginary of human activity that accepts this fact. Thinking that buys into it may reject the hubris of plastic’s utopian promise of a malleable, controlled world sealed off from the decay of biological reality, but it cannot conceive of forms of human activity that do not decay all else biological. The scholarship and institutions produced as a part of this apparatus can only conceive of human activity as something that needs to be “regulated,” in reality denying people access to their ancestral lands and creating barriers that prevent people from engaging in land-enriching labor. For millennia, people have understood that our labor cannot be sealed from the metabolic cycles of the biosphere, and that this need not be a bad thing. We must reclaim this knowledge from the sealed logics of the plastic imaginary. We must unseal the logic of our built spaces, our societies, our labor, and our lives.
+          </p>
           <div class="footnotes">
               <p class="footnote" id="footnote-1">
                   <sup>c1</sup> Jeffrey L. Meikle, <i>American Plastic: A Cultural History</i> (New Brunswick, NJ: Rutgers University Press, 1995), 26.
-                  <a href="#ref-1">↩</a>
+                  <a href="#ref-1">↩ (back to reading)</a>
               </p>
               <p class="footnote" id="footnote-2">
                   <sup>c2</sup> Heather Davis. “Life & Death in the Anthropocene: A Short History of Plastic,” <i>Art in the Anthropocene: Encounters Among Aesthetics, Politics, Environments, and Epistemologies</i> (London: Open Humanities Press, 2015),  349.
                   <a href="#ref-2">↩</a>
               </p>
               <p class="footnote" id="footnote-3">
-                  <sup>c3</sup> Davis, 348.
+                  <sup>c3</sup> Ibid., 348.
                   <a href="#ref-3">↩</a>
               </p>
               <p class="footnote" id="footnote-4">
-                  <sup>c4</sup> Davis, 349.
+                  <sup>c4</sup> Ibid., 349.
                   <a href="#ref-4">↩</a>
               </p>
               <p class="footnote" id="footnote-5">
@@ -220,7 +233,7 @@
                   <a href="#ref-8">↩</a>
               </p>
               <p class="footnote" id="footnote-9">
-                  <sup>c7</sup>  Davis, 353.
+                  <sup>c7</sup> Ibid., 353.
                   <a href="#ref-9">↩</a>
               </p>
               <p class="footnote" id="footnote-10">
@@ -230,5 +243,37 @@
               <p class="footnote" id="footnote-11">
                   <sup>c9</sup> Davis, 351.
                   <a href="#ref-11">↩</a>
+              </p>
+              <p class="footnote" id="footnote-12">
+                  <sup>c10</sup> Stieglitz, F. V., “Exploitation forestière rurale et réhabilitation des forêts: Premiers résultats d'un projet de recherche interdisciplinaire en Haute-Guinée (Janv – Mai 1990, Republique de Guinee), Mimeo (Berlin: 1990).
+                  <a href="#ref-12">↩</a>
+              </p>
+              <p class="footnote" id="footnote-13">
+                  <sup>c11</sup>  James Fairhead and Melissa Leach, "False Forest History, Complicit Social Analysis: Rethinking Some West African Environmental Narratives," World Development 23, no. 6 (1995), 1025-1026.
+                  <a href="#ref-13">↩</a>
+              </p>
+              <p class="footnote" id="footnote-14">
+                  <sup>c12</sup>  Ibid., 1030.
+                  <a href="#ref-14">↩</a>
+              </p>
+              <p class="footnote" id="footnote-15">
+                  <sup>c13</sup> Ibid., 1026.
+                  <a href="#ref-15">↩</a>
+              </p>
+              <p class="footnote" id="footnote-16">
+                  <sup>c14</sup> Ibid., 1027.
+                  <a href="#ref-16">↩</a>
+              </p>
+              <p class="footnote" id="footnote-17">
+                  <sup>c15</sup>  Sims, J. L., “The journal of a journey in the interior of Liberia by James. L. Sims, of Monrovia. Scenes in the interior of Liberia: being a tour through the countries of the Dey, Goulah, Pessah Barlain, Kpellay, Suloang, and the King Boatswain’s tribes, in 1858,” New York Colonization Journal. Vol. IX, No. 12, Vol. X, Nos. 6 and 8 (1859-1860).
+                  <a href="#ref-17">↩</a>
+              </p>
+              <p class="footnote" id="footnote-18">
+                  <sup>c16</sup>  Fairhead & Leach, 1026.
+                  <a href="#ref-18">↩</a>
+              </p>
+              <p class="footnote" id="footnote-18">
+                  <sup>c16</sup>   Fairhead & Leach, 1030-31.
+                  <a href="#ref-18">↩</a>
               </p>
           </div>
